Resolved spacing under hero

--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -27,6 +27,10 @@ Text Domain:  accelerate-theme-child
     background: none repeat scroll 0 0 #45ac9d;
 }
 
+#primary {
+	margin-bottom: 0;
+}
+
 /*--- Case Studies on Homepage ---*/
 
 .homepage-featured-work {
